--- a/src/main/resources/templates/index-menu-revisor.hbs
+++ b/src/main/resources/templates/index-menu-revisor.hbs
@@ -40,8 +40,8 @@
                 </button>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                     <li><a class="dropdown-item" onclick="location.href='/asocIngresoEgreso'">Ingreso Egreso</a></li>
-                    <li><a class="dropdown-item" href="#">Categoria Egreso</a></li>
-                    <li><a class="dropdown-item" href="#">Categoria Presupuesto</a></li>
+                    <li><a class="dropdown-item" onclick="location.href='/asocCategoriaEgreso'">Categoria Egreso</a></li>
+                    <li><a class="dropdown-item" onclick="location.href='/asocCategoriaPresupuesto'">Categoria Presupuesto</a></li>
                 </ul>
             </div>
 
