--- a/src/main/resources/public/css/estilo-organizacion.css
+++ b/src/main/resources/public/css/estilo-organizacion.css
@@ -13,6 +13,12 @@ background: white;
   font-weight: 300;
   line-height: 1.2;
 }
+.display-8 {
+  font-size: calc(0.75rem + 0.75vw);
+  font-weight: 300;
+  line-height: 1.2;
+}
+
 .container-body-egresos-ingresos {
   padding-right: var(--bs-gutter-x, 0.75rem);
   padding-left: var(--bs-gutter-x, 0.75rem);
@@ -28,7 +34,7 @@ background: white;
 }
 .btn-xlg {
   padding: 0.75rem 1.5rem;
-  font-size: 1.750rem;
+  font-size: 1.5rem;
   border-radius: 0.45rem;
 }
 
