--- a/src/main/resources/templates/asociar-egreso-categoria.hbs
+++ b/src/main/resources/templates/asociar-egreso-categoria.hbs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="en" dir="ltr" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -17,11 +17,11 @@
           integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
     <script src="/js/logic.js"></script>
-    <link rel="stylesheet" href="/css/estilo-visualizar-egreso.css">
-    <!-- CSS only -->
-    <title>Ver Egresos</title>
+    <link rel="stylesheet" href="/css/estilo-organizacion.css">
+    <title>Asociar ingresos a egresos</title>
 </head>
 <body>
+
 <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
     <div class="container-fluid">
         <div class="space-around-horizontal navbar-nav ml-auto">
@@ -39,10 +39,12 @@
                         aria-expanded="true">
                     Asociar
                 </button>
-                                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                     <li><a class="dropdown-item" onclick="location.href='/asocIngresoEgreso'">Ingreso Egreso</a></li>
-                    <li><a class="dropdown-item" onclick="location.href='/asocCategoriaEgreso'">Categoria Egreso</a></li>
-                    <li><a class="dropdown-item" onclick="location.href='/asocCategoriaPresupuesto'">Categoria Presupuesto</a></li>
+                    <li><a class="dropdown-item" onclick="location.href='/asocCategoriaEgreso'">Categoria Egreso</a>
+                    </li>
+                    <li><a class="dropdown-item" onclick="location.href='/asocCategoriaPresupuesto'">Categoria
+                        Presupuesto</a></li>
                 </ul>
             </div>
 
@@ -68,43 +70,63 @@
             </form>
         </div>
 
-
     </div>
 </nav>
 
+<br>
 
-<div class="space-evenly-vert" style="align-items: stretch; overflow:auto; min-height: 80%; padding: 16px">
-
-    <div class="distribute-cards-evenly">
-
-        {{#each egresos}}
-            <div onclick="window.location='/egreso/{{id}}';">
-                <div class="card clickeable text-dark bg-light-tp mb-3"
-                     style="min-height: 16rem; min-width: 22rem; max-height: 20rem;"
-                     onclick="location.href='/egreso/{{id}}">
-                    <div class="card-header display-7 text-center"> Egreso {{inc @index}}</div>
-                    <div class="card-body">
-                        <div class="space-evenly-vert align-items-start">
-                            <div class="container-body-egreso justify-content-start" style="padding-right: 0">
-                                <p class="card-text">Nro: {{numeroOperacion}}</p>
-                                <p class="card-text">Descripcion: {{descripcion}}</p>
-                                <p class="card-text">Fecha: {{fechaOperacion}}</p>
-                                <p class="card-text">Monto Total: {{montoTotal}}</p>
-                            </div>
+<form action="/asocIngresoEgreso" method="post" class="form">
+    <div class="space-evenly-vert">
+        <div class="card text-dark bg-light-tp mb-3 padd" style="max-width: 18rem; min-width: 24rem;">
+            <div class="card-header display-7 text-center">Asociar Ingreso Egreso</div>
+            <div class="card-body">
+                <div class="align-content-start">
+                    <h5 class="card-title"> Ingresos </h5>
+                </div>
+                <div class="container">
+                    {{#each egresos}}
+                        <div class="space-evenly-vert align-items-start " style="margin-left: 8px">
+                            <label for="cbox1">
+                                <input type="checkbox" id="cbox1" name="ingreso" value="{{id}}">
+                                Nro: {{id}} Descripcion:{{descripcion}}
+                            </label> <label
+                                for="cbox2"></label>
                         </div>
-                    </div>
+                    {{else}}
+                        <p class="display-7"> Sin egresos.</p>
+                    {{/each}}
+                </div>
+                <br>
+                <div class="align-content-start">
+                    <h5 class="card-title"> Egresos </h5>
+                </div>
+                <div class="container">
+                    {{#each ingresos}}
+                        <div class="space-evenly-vert align-items-start" style="margin-left: 8px">
+                            <label for="cbox2">
+                                <input type="checkbox" id="cbox2" name="egreso" value="{{id}}">
+                                Nro: {{id}} Descripcion:{{descripcion}}
+                            </label>
+                        </div>
+                    {{else}}
+                        <p class="display-7"> Sin egresos.</p>
+                    {{/each}}
                 </div>
             </div>
-        {{else}}
-            <p class="display-7"> Sin egresos.</p>
-        {{/each}}
+            <div class="justify-content-end d-flex" style="margin: 1rem">
+                <button class="btn btn-lg btn-dark rounded-pill" type="submit">Asociar</button>
+            </div>
+        </div>
 
+        <br>
     </div>
+</form>
 
-    <div class="d-flex justify-content-center padding-button-home">
-        <button class="btn btn-lg btn-dark rounded-pill" onclick="location.href='/home'">Volver a Home</button>
-    </div>
+<br>
+<div class="d-flex justify-content-center">
+    <button class="btn btn-xlg btn-dark rounded-pill" onclick="location.href='/home'">Volver a Home
+    </button>
 </div>
-
+<br>
 </body>
 </html>
