--- a/src/main/resources/templates/asociar-egreso-ingreso.hbs
+++ b/src/main/resources/templates/asociar-egreso-ingreso.hbs
@@ -73,12 +73,11 @@
     </div>
 </nav>
 
-<br>
 
 <form action="/asocIngresoEgreso" method="post" class="form">
-    <div class="space-evenly-vert" style="padding: 32px">
-        <div class="card text-dark bg-light-tp mb-3" style="max-width: 18rem; min-width: 24rem;">
-            <div class="card-header display-7 text-center" style="background-color: #f8f9fa;">Asociar Ingreso Egreso</div>
+    <div class="space-evenly-vert" style="padding: 64px">
+        <div class="card text-dark bg-light-tp mb-3" style="min-width: 18rem; max-width: 30rem; background-color: #f8f9fa;">
+            <div class="card-header display-7 text-center">Asociar Ingreso Egreso</div>
             <div class="card-body">
                 <div class="align-content-start">
                     <h5 class="card-title"> Egresos </h5>
@@ -87,7 +86,7 @@
                     {{#each egresos}}
                         <div class="space-evenly-vert align-items-start"  style="margin-left: 8px;">
                             <label for="cbox1">
-                                <input type="radio" id="cbox1" name="ingreso" value="{{id}}">
+                                <input type="checkbox" id="cbox1" name="egreso" value="{{id}}">
                                 Nro: {{id}} Descripcion:{{descripcion}}
                             </label> <label
                                 for="cbox2"></label>
@@ -104,7 +103,7 @@
                     {{#each ingresos}}
                         <div class="space-evenly-vert align-items-start" style="margin-left: 8px">
                             <label for="cbox2">
-                                <input type="checkbox" id="cbox2" name="egreso" value="{{id}}">
+                                <input type="radio" id="cbox2" name="ingreso" value="{{id}}">
                                 Nro: {{id}} Descripcion:{{descripcion}}
                             </label>
                         </div>
@@ -122,11 +121,9 @@
     </div>
 </form>
 
-<br>
 <div class="d-flex justify-content-center">
     <button class="btn btn-xlg btn-dark rounded-pill" onclick="location.href='/home'">Volver a Home
     </button>
 </div>
-<br>
 </body>
 </html>
