--- a/src/main/resources/templates/home.hbs
+++ b/src/main/resources/templates/home.hbs
@@ -13,7 +13,14 @@
     <title>Home</title>
 </head>
  <body>
-    <div>
+    {{#if asociarEIok}}<script>alert("Se asociaron los {{totalECount}} egresos al ingreso elegido")</script>
+    {{else}}
+        {{#if asociarEIfail}}
+            <script>alert("Hubo un error asociando los egresos al ingreso elegido")</script>
+        {{/if}}
+    {{/if}}
+
+ <div>
     <h1 class="titulo">Proem</h1>
     </div>
       <div class="button-container">
