--- a/src/main/resources/templates/asociar-presupuesto-categoria.hbs
+++ b/src/main/resources/templates/asociar-presupuesto-categoria.hbs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr" xmlns:th="http://www.w3.org/1999/xhtml">
+<html lang="en" dir="ltr" xmlns:th="http://www.w3.org/1999/xhtml" xmlns:margin-left="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -18,7 +18,7 @@
 
     <script src="/js/logic.js"></script>
     <link rel="stylesheet" href="/css/estilo-organizacion.css">
-    <title>Asociar ingresos a egresos</title>
+    <title>Asociar categorias a egresos</title>
 </head>
 <body>
 
@@ -73,43 +73,42 @@
     </div>
 </nav>
 
-<br>
 
-<form action="/asocIngresoEgreso" method="post" class="form">
-    <div class="space-evenly-vert">
-        <div class="card text-dark bg-light-tp mb-3 padd" style="max-width: 18rem; min-width: 24rem;">
-            <div class="card-header display-7 text-center">Asociar Ingreso Egreso</div>
+<form action="/asocCategoriaPresupuesto" method="post" class="form">
+    <div class="space-evenly-vert" style="padding: 64px">
+        <div class="card text-dark bg-light-tp mb-3" style="min-width: 18rem; max-width: 48rem; background-color: #f8f9fa;">
+            <div class="card-header display-7 text-center">Asociar Categorias a Presupuestos</div>
             <div class="card-body">
                 <div class="align-content-start">
-                    <h5 class="card-title"> Ingresos </h5>
+                    <h5 class="card-title"> Presupuestos </h5>
                 </div>
                 <div class="container">
-                    {{#each egresos}}
-                        <div class="space-evenly-vert align-items-start " style="margin-left: 8px">
+                    {{#each presupuestos}}
+                        <div class="space-evenly-vert align-items-start"  style="margin-left: 8px;">
                             <label for="cbox1">
-                                <input type="checkbox" id="cbox1" name="ingreso" value="{{id}}">
-                                Nro: {{id}} Descripcion:{{descripcion}}
+                                <input type="checkbox" id="cbox1" name="presupuesto" value="{{id}}">
+                                Monto Total: {{total}} Descripcion:{{cantidad}} items de {{proveedor.nombreApellidoRazon}}
                             </label> <label
                                 for="cbox2"></label>
                         </div>
                     {{else}}
-                        <p class="display-7"> Sin egresos.</p>
+                        <p class="display-8 text-center"> Sin presupuestos.</p>
                     {{/each}}
                 </div>
                 <br>
                 <div class="align-content-start">
-                    <h5 class="card-title"> Egresos </h5>
+                    <h5 class="card-title"> Categorias </h5>
                 </div>
                 <div class="container">
-                    {{#each ingresos}}
+                    {{#each categorias}}
                         <div class="space-evenly-vert align-items-start" style="margin-left: 8px">
                             <label for="cbox2">
-                                <input type="checkbox" id="cbox2" name="egreso" value="{{id}}">
-                                Nro: {{id}} Descripcion:{{descripcion}}
+                                <input type="checkbox" id="cbox2" name="categoria" value="{{id}}">
+                                Descripcion:{{descripcion}}. Criterio {{criterio.nombre}}
                             </label>
                         </div>
                     {{else}}
-                        <p class="display-7"> Sin egresos.</p>
+                        <p class="display-8 text-center"> Sin categorias.</p>
                     {{/each}}
                 </div>
             </div>
@@ -122,11 +121,9 @@
     </div>
 </form>
 
-<br>
 <div class="d-flex justify-content-center">
     <button class="btn btn-xlg btn-dark rounded-pill" onclick="location.href='/home'">Volver a Home
     </button>
 </div>
-<br>
 </body>
 </html>
