--- a/src/main/resources/templates/egreso.hbs
+++ b/src/main/resources/templates/egreso.hbs
@@ -81,7 +81,7 @@
                     <p class="card-title">Numero de operacion: {{egreso.numeroOperacion}}</p>
                     <p class="card-text">Descripcion: {{egreso.descripcion}}</p>
                     <p class="card-text">Fecha: {{egreso.fechaOperacion}}</p>
-                    <p class="card-text">Monto Total: {{egreso.montoTotal}} $ </p>
+                    <p class="card-text">Monto Total: {{egreso.montoTotal}}0 $ </p>
                     <p class="card-text" style="margin-bottom: 8px">Comprobante: </p>
                     <p class="card-text" style="margin-bottom: 0;margin-left: 24px">Numero de comprobante: {{egreso.comprobante.numeroComprobante}}  </p>
                     <p class="card-text" style="margin-bottom: 0;margin-left: 24px">Items: </p>
@@ -95,7 +95,7 @@
                     <p class="card-text">Ingreso Asociado: {{tiene-ingreso}}</p>
                     {{#if tiene-ingreso}}
                         <p class="card-text" style="margin-bottom: 0; margin-left: 60px;">Ingreso: {{ingreso.descripcion}} </p>
-                        <p class="card-text" style="margin-bottom: 0; margin-left: 60px;">Monto total: {{ingreso.montoTotal}} $ </p>
+                        <p class="card-text" style="margin-bottom: 0; margin-left: 60px;">Monto total: {{ingreso.montoTotal}}0 $ </p>
                         <p class="card-text" style="margin-bottom: 0; margin-left: 60px;">Fecha de Operacion: {{ingreso.fechaOperacion}} </p>
                     {{/if}}
 
