--- a/src/main/resources/templates/egreso.hbs
+++ b/src/main/resources/templates/egreso.hbs
@@ -71,7 +71,7 @@
 
     </div>
 </nav>
-<div class="d-flex justify-content-center" style="padding: 16px">
+<div class="d-flex justify-content-center" style="padding: 32px">
     <div class="card text-dark bg-light-tp mb-3"
          style="min-height: 24rem; min-width: 32rem; max-width: 70%">
         <div class="card-header display-7 text-center"> Egreso {{egresoID}}</div>
@@ -113,8 +113,21 @@
                     </div>
                 </div>
             </div>
+            <div class="d-flex justify-content-evenly" style="padding: 16px" >
+                <a href="/files/SO - 1° Parcial 2C2016.pdf" class="btn btn-dark rounded-pill" download="SO - 1° Parcial 2C2016.pdf" style="font-size: 16px,">Descargar</a>
+                <button onclick="window.open('/files/SO - 1° Parcial 2C2016.pdf')"  class="btn btn btn-dark rounded-pill">Ver PDF</button>
+            </div>
         </div>
     </div>
+</div>
+
+<div class="d-flex justify-content-center padding-button-home">
+    <form action="/upload/{{egresoID}}" method="post" enctype="multipart/form-data">
+        <label for="myfile">Subir archivo pdf</label>
+        <input type="file" id="myfile" name="myfile"/>
+        <input type="submit" id="buttonUpload" value="Upload"/>
+        <br>
+    </form>
 </div>
 
 <div class="d-flex justify-content-center padding-button-home">
