AGREGAR CATEGORIAS DINAMICAMENTE en el asociar! + guardado de PDF fix

--- a/src/main/resources/public/css/estilo-visualizar-egreso.css
+++ b/src/main/resources/public/css/estilo-visualizar-egreso.css
@@ -18,9 +18,11 @@ html{
     min-width: 300px;
     max-width: 400px;
 }
-
+input[type="file"] {
+    display: inline;
+}
 .padding-button-home {
-    padding: 4px;
+    padding: 8px;
 }
 
 .container-body-egreso {
