--- a/src/main/resources/templates/asociar-egreso-categoria.hbs
+++ b/src/main/resources/templates/asociar-egreso-categoria.hbs
@@ -74,9 +74,11 @@
 </nav>
 
 
-<form action="/asocCategoriaEgreso" method="post" class="form">
-    <div class="space-evenly-vert" style="padding: 64px">
-        <div class="card text-dark bg-light-tp mb-3" style="min-width: 18rem; max-width: 40rem; background-color: #f8f9fa;">
+<div class="space-evenly-vert" style="padding: 64px">
+    <form action="/asocCategoriaEgreso" method="post" class="form">
+
+        <div class="card text-dark bg-light-tp mb-3"
+             style="min-width: 18rem; max-width: 40rem; background-color: #f8f9fa;">
             <div class="card-header display-7 text-center">Asociar Categorias a Egresos</div>
             <div class="card-body">
                 <div class="align-content-start">
@@ -84,7 +86,7 @@
                 </div>
                 <div class="container">
                     {{#each egresos}}
-                        <div class="space-evenly-vert align-items-start"  style="margin-left: 8px;">
+                        <div class="space-evenly-vert align-items-start" style="margin-left: 8px;">
                             <label for="cbox1">
                                 <input type="checkbox" id="cbox1" name="egreso" value="{{id}}">
                                 Nro: {{id}} Descripcion:{{descripcion}}
@@ -111,15 +113,23 @@
                         <p class="display-8 text-center"> Sin categorias.</p>
                     {{/each}}
                 </div>
+
             </div>
             <div class="justify-content-end d-flex" style="margin: 1rem">
                 <button class="btn btn-lg btn-dark rounded-pill" type="submit">Asociar</button>
             </div>
-        </div>
 
-        <br>
+        </div>
+    </form>
+
+    <br>
+    <div class="d-flex justify-content-end" style="padding: 8px">
+        <form action="/cacheCategoria" method="post" class="form">
+            <input type="text" id="cbox2" name="newCategoria" placeholder="Nombre"/>
+            <button class="btn btn-dark" type="submit" style="padding-left: 8px">Crear Categoria</button>
+        </form>
     </div>
-</form>
+</div>
 
 <div class="d-flex justify-content-center">
     <button class="btn btn-xlg btn-dark rounded-pill" onclick="location.href='/home'">Volver a Home
