--- a/src/main/resources/templates/home.hbs
+++ b/src/main/resources/templates/home.hbs
@@ -27,7 +27,7 @@
         <form action="/logout" method="get" class="form-">
             <button class="boton_salir" onclick="location.href='index-login.html'" type="submit">Salir</button>
         </form>
-        <button class="boton_crearOPE" onclick="location.href='CrearOperacionEgreso';">
+        <button class="boton_crearOPE" onclick="location.href='crearOperacionEgreso';">
             <p class="texto-operacion">Crear Operacion de Egreso</p>
         </button>
         <button class="boton_crearIN" onclick="location.href='asocEgresoPresupuestoACategoria'">
