--- a/src/main/resources/templates/index-seleccionar-proveedores.hbs
+++ b/src/main/resources/templates/index-seleccionar-proveedores.hbs
@@ -15,49 +15,113 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/estilo-articulo.css">
 
+    <script src="/js/logic.js"></script>
+    <link rel="stylesheet" href="/css/estilo-visualizar-egreso.css">
     <!-- CSS only -->
     <title>Proveedores</title>
 </head>
-  <body>
-    <div class="titulo">
-    <h1 class="nombre-titulo">Seleccionar Proveedor</h1>
-    </div>
-    <div class="general">
-      <br>
-      <div class="general-medio"><br>
-    <h1 class="medio">Proveedor:</h1>
-  </div><br>
-  <form action="/crearEgreso2" method="post" class="form-">
-       <div class="box-Medio">
-       <select class="opcion-multiple" name="proveedor">
-           {{#each proveedores}}
-             <option value='{{nombreApellidoRazon}}'>{{nombreApellidoRazon}}</option>
-           {{/each}}
-       </select>
+<body>
+<nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+    <div class="container-fluid">
+        <div class="space-around-horizontal navbar-nav ml-auto">
+            <a class="navbar-brand" onclick="location.href='/home'">Home</a>
+            <button type="button" class="btn btn-dark align-content-center"
+                    onclick="location.href='crearOperacionEgreso'">Crear Operacion de Egreso
+            </button>
+            <button type="button" class="btn btn-dark align-content-center" onclick="location.href='ingreso'">
+                Cargar Operacion de Ingreso
+            </button>
+
+            <div class="dropdown align-content-md-around">
+                <button class="btn btn-dark align-content-center dropdown-toggle" type="button" id="dropdownMenuButton"
+                        data-bs-toggle="dropdown"
+                        aria-expanded="true">
+                    Asociar
+                </button>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                    <li><a class="dropdown-item" onclick="location.href='/asocIngresoEgreso'">Ingreso Egreso</a></li>
+                    <li><a class="dropdown-item" onclick="location.href='/asocCategoriaEgreso'">Categoria Egreso</a>
+                    </li>
+                    <li><a class="dropdown-item" onclick="location.href='/asocCategoriaPresupuesto'">Categoria
+                        Presupuesto</a></li>
+                </ul>
+            </div>
+
+            <div class="dropdown align-content-center">
+                <button class="btn btn-dark align-content-center dropdown-toggle" type="button" id="dropdownMenuButton"
+                        data-bs-toggle="dropdown"
+                        aria-expanded="true">
+                    Visualizar
+                </button>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                    <li><a class="dropdown-item" onclick="location.href='/ver-ingresos'">Ver Ingresos</a></li>
+                    <li><a class="dropdown-item" onclick="location.href='/ver-egresos'">Ver Egresos</a></li>
+                </ul>
+            </div>
         </div>
-        <br><br><br>
-        <div class="general-medio">
-          <h1 class="medio">Presupuesto:</h1>
-        </div><br>
-         <div class="box-Medio">
-           <input type="text" name="presupuesto" required>
-         </div>
-        <div class="general-siguiente3">
+
+        <div class="d-flex justify-content-end">
+            <button type="button" class="btn btn-dark" onclick="location.href='ver-bandeja'">
+                Bandeja de Entrada
+            </button>
+            <form action="/logout" method="get" class="form">
+                <button class="btn btn-dark" onclick="location.href='index-login.html'" type="submit">Salir</button>
+            </form>
+        </div>
+
 
     </div>
-        <br><br><br>
-       <div class="general-siguiente">
-     <button class="boton_siguiente" type="submit">Siguiente</button>
-   </div>
-   <div class="general-siguiente2">
-   <button class="boton_siguiente" onclick="location.href='/crearEgreso1'">Volver</button>
-   </div>
-   <br><br><br><br>
-       <div class="general-home">
-       <button class="boton_home" onclick="location.href='/home'">Volver a Home</button>
-       </div>
-       </div>
-  </body>
+</nav>
+<form action="/crearEgreso2" method="post" class="form">
+    <div class="d-flex justify-content-center" style="padding: 64px">
+        <div class="card text-dark bg-light-tp mb-3"
+             style="min-height: 18rem; min-width: 36rem; max-width: 70%">
+            <div class="card-header display-7 text-center"> Creación de Operación de Egreso</div>
+            <div class="card-body" style="margin-top: 32px">
+                <div class="space-evenly-vert align-items-start">
+                    <div class="" style="padding-right: 0;width: -webkit-fill-available">
+
+                        <div class="d-flex justify-content-between">
+                            <p class="card-text">Prespuestos de {{proveedorElegido.nombreApellidoRazon}}:</p>
+                            <select name="proveedor">
+                                {{#each presupuestos}}
+                                <option value='{{nombreApellidoRazon}}'>{{nombreApellidoRazon}}</option>
+                            {{/each}}
+                                </select>
+                        </div>
+
+                        <div class="d-flex justify-content-between">
+                            <p class="card-text">Crear nuevo presupuesto:</p>
+                            <label>
+                                <input type="text" name="presupuestoName" required="required">
+                            </label>
+                        </div>
+
+
+                        <div class="d-flex justify-content-between">
+                            <p class="card-text">Valor Total:</p>
+                            <label>
+                                <input type="text" name="valorTotal" required="required">
+                            </label>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+    <div class="d-flex justify-content-center padding-button-home">
+        <button class="btn btn-dark rounded-pill" onclick="location.href='/crearEgreso1'">Volver</button>
+
+        <button class="btn btn-dark rounded-pill" type="submit">Siguiente</button>
+    </div>
+</form>
+
+<div class="d-flex justify-content-center padding-button-home">
+    <button class="btn btn-lg btn-dark rounded-pill" onclick="location.href='/home'">Volver a Home</button>
+</div>
+</div>
+
+</body>
 </html>
