--- a/src/main/resources/templates/operacion.hbs
+++ b/src/main/resources/templates/operacion.hbs
@@ -38,7 +38,7 @@
   			top: 53%;
   			transform: translate(-50%, -50%);">
 			<br>
-			<form action="/CrearOperacionEgreso" method="post" class="form-">
+			<form action="/crearOperacionEgreso" method="post" class="form-">
 				&nbsp;&nbsp;&nbsp;Proveedor:
 				<select style=" width: 350; position: absolute; left:160px" name="proveedores">
                     {{#each proveedores}}
